--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "sass": "sass styles.scss styles.css",
     "browser-sync": "browser-sync start --server --files index.html styles.css",
-    "sass-watch": "sass *.scss styles.css --watch"
+    "sass-watch": "sass *.scss styles.css --watch",
+    "lint": "stylelint styles.scss ./**/*.scss",
+    "dev": "concurrently npm:sass-watch npm:browser-sync"
   },
   "author": "Ásgerður Júlía",
   "license": "ISC",
