--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "verkefni 6, læra að nota node og fleira",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "sass": "sass styles.scss styles.css",
     "browser-sync": "browser-sync start --server --files index.html styles.css",
+    "sass": "sass styles.scss styles.css",
     "sass-watch": "sass *.scss styles.css --watch",
     "lint": "stylelint styles.scss ./**/*.scss",
-    "dev": "concurrently npm:sass-watch npm:browser-sync"
+    "dev": "concurrently npm:sass-watch npm:browser-sync",
+    "lint-fix": "stylelint styles.scss ./**/*.scss --fix"
   },
   "author": "Ásgerður Júlía",
   "license": "ISC",
